--- a/app/templates/hotel.html
+++ b/app/templates/hotel.html
@@ -8,15 +8,101 @@
 {% endblock %}
 
 {% block page_content %}
-	<h1>hhh</h1>
-	<div id="myGrid" style="width:600px;height:500px;"></div>
+    <div>
+    <h3 class="text-center">酒店详情页</h3>
+    <div id="filter">
+        <form class="form-horizontal">
+            <div class="control-group row">
+
+            <div class="control-group row">
+                <label for="hotelID" class="span1 control-label">酒店ID：</label>
+                <div class="span4">
+                    <input type="text" class="" id="hotelID" value="" placeholder="可输入ID串，逗号隔开">
+                </div>
+                <label for="hotelName" class="span1 control-label">酒店名：</label>
+                <div class="span4">
+                    <input type="text" class="" id="hotelName" value="" placeholder="可输入名称串，逗号隔开">
+                </div>
+            </div>
+
+
+            <div class="control-group row">
+                <label for="cityID" class="span1 control-label">城市ID：</label>
+                <div class="span4">
+                    <input type="text" class="" id="cityID" placeholder="可输入ID串，逗号隔开">
+                </div>
+                <label for="cityName" class="span1 control-label">城市名：</label>
+                <div class="span4">
+                    <input type="text" class="" id="cityName" placeholder="可输入名称串，逗号隔开">
+                </div>
+            </div>
+            <div class="control-group row">
+                <label class="span1 control-label">国家名：</label>
+                <div class="span4">
+                    <input type="text" class="" id="country" placeholder="国家（可输入名称串，逗号隔开）" value="">
+                </div>
+                <div class="span2">
+                    <select class="input-small" id="continentList" name="continentList[]" multiple="multiple">
+                        <option value="aaaaaa">aaaaa</option>
+                </div>
+                <div class="span2">
+                    <select class="input-small hide" id="status">
+                        <option value="all">全部状态</option>
+                        <option value="Open">Open</option>
+                        <option value="Dept_Open">Dept_Open</option>
+                        <option value="Ready">Ready</option>
+                        <option value="Close">Close</option>
+                    </select>
+                </div>
+                <div class="span2">
+                    <select class="input-small hide" id="city_type">
+                        <option value="all">全部类型</option>
+                        <option value="Regular">Regular</option>
+                        <option value="Small">Small</option>
+                    </select>
+                </div>
+            </div>
+            <div class="control-group row">
+                <label class="span1 control-label">排序：</label>
+                <div class="span2">
+                    <select class="input-small" id="sortTag" name="sortTag">
+                        <option value="city_id">城市</option>
+                        <option value="country">国家</option>
+                        <option value="grade">评分</option>
+                        <option value="star">星级</option>
+                    </select>
+                </div>
+                <div class="span2">
+                    <select class="input-small" id="sortOrder" name="sortOrder">
+                        <option value="positive">正序</option>
+                        <option value="negtive">倒序</option>
+                    </select>
+                </div>
+                <div class="span1 checkbox">
+                    <input type="checkbox" id="selectAll"> 全部选定
+                </div>
+                <div class="span6">
+                    <button type="button" class="span2 btn btn-primary" style="float: right" onclick="doQuery();">查询</button>
+                </div>
+            </div>
+        </form>
+    </div>
+    <div id="btns">
+        <button type="button" class="btn btn-link hide"  id="exportToCSV">数据导出</button>
+    </div>
+    <div id="info" style="width:100%;height:400px;" class="text-center"></div>
+    <div id="pager" style="width:100%;height:20px;"></div>
+    </div>
+
 {% endblock %}
 
 {% block scripts %}
 {{ supper }}
 	<script src="{{url_for('static', filename='js/jquery.js')}}"></script>
 	<script src="{{url_for('static', filename='js/jquery.event.drag-2.2.js')}}"></script>
+
 	<script src="{{url_for('static', filename='js/slick.core.js')}}"></script>
 	<script src="{{url_for('static', filename='js/slick.grid.js')}}"></script>
+
 	<script src="{{url_for('static', filename='js/test.js')}}"></script>
 {% endblock %}
