--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="{{url_for('static',filename='css/slick.grid.css')}}" type="text/css"/>
     <link rel="stylesheet" href="{{url_for('static',filename='css/slick.pager.css')}}" type="text/css"/>
     <link rel="stylesheet" href="{{url_for('static',filename='css/slick.columnpicker.css')}}" type="text/css"/>
-    <link rel="stylesheet" href="{{url_for('static',filename='css/reset.css')}}'"/>
+    <link rel="stylesheet" href="{{url_for('static',filename='css/reset.css')}}"/>
     {%- endblock styles %}
     {%- endblock head %}
   </head>
