--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,9 +1,10 @@
-{% extends "base.html" %}
+{% extends "base_simple.html" %}
 
 {% block title %}Flasky - Internal Server Error{% endblock %}
 
-{% block page_content %}
-<div class="page-header">
+{% block content %}
+<div class="row text-center">
     <h1>Internal Server Error</h1>
+	<h3>服务器出错了，可以试试联系大张~~</h3>
 </div>
 {% endblock %}
