--- a/app/templates/base_simple.html
+++ b/app/templates/base_simple.html
@@ -14,12 +14,8 @@
     {%- endblock metas %}
 
     {%- block styles %}
-    <link rel="stylesheet" href="static/css/lib/jquery-ui-1.8.16.custom.css" type="text/css"/>
     <link rel="stylesheet" href="static/css/lib/bootstrap.min.css" type="text/css"/>
-    <link rel="stylesheet" href="static/css/lib/bootstrap-multiselect.css" type="text/css"/>
-    <link rel="stylesheet" href="static/css/lib/slick.grid.css" type="text/css"/>
-    <link rel="stylesheet" href="static/css/lib/slick.pager.css" type="text/css"/>
-    <link rel="stylesheet" href="static/css/lib/slick.columnpicker.css" type="text/css"/>
+    <!--<link rel="stylesheet" href="static/css/lib/bootstrap-multiselect.css" type="text/css"/>-->
     <link rel="stylesheet" href="static/css/lib/reset.css"/>
     {%- endblock styles %}
     {%- endblock head %}
@@ -34,7 +30,7 @@
 	        <a class="brand" href="#">城市数据管理平台</a>
 	        <ul class="nav">
 	            <li class="dropdown">
-	                <a href="index" >
+	                <a href="index">
 	                城市总览
 	                </a>
 	            </li>
@@ -90,26 +86,7 @@
     {% block scripts %}
 	<script src="static/js/lib/jquery.js"></script>
 	<script src="static/js/lib/bootstrap.min.js"></script>
-	<script src="static/js/lib/jquery.event.drag-2.0.min.js"></script>
-	<script src="static/js/lib/jquery.ui.core.js"></script>
-	<script src="static/js/lib/jquery.ui.widget.js"></script>
-	<script src="static/js/lib/jquery.ui.mouse.js"></script>
-	<script src="static/js/lib/jquery.ui.resizable.js"></script>
-	<script src="static/js/lib/jquery.ui.sortable.js"></script>
-	<!-- slickgrid -->
-	<script src="static/js/lib/slick.core.js"></script>
-	<script src="static/js/lib/slick.grid.js"></script>
-	<script src="static/js/lib/slick.dataview.js"></script>
-	<script src="static/js/lib/slick.formatters.js"></script>
-	<script src="static/js/lib/slick.editors.js"></script>
-	<script src="static/js/lib/slick.checkboxselectcolumn.js"></script>
-	<script src="static/js/lib/slick.rowselectionmodel.js"></script>
-	<script src="static/js/lib/slick.pager.js"></script>
-	<script src="static/js/lib/slick.columnpicker.js"></script>
-	<!-- bootstrap helper -->
-	<script src="static/js/lib/bootstrap-slickgrid.js"></script>
-	<script src="static/js/lib/bootstrap-multiselect.js"></script>
-
+	<!--<script src="static/js/lib/bootstrap-multiselect.js"></script>-->
     {%- endblock scripts %}
     {%- endblock body %}
   </body>
