--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,9 +1,11 @@
-{% extends "base.html" %}
+{% extends "base_simple.html" %}
 
 {% block title %}Flasky - Page Not Found{% endblock %}
 
-{% block page_content %}
-<div class="page-header">
-    <h1>Not Found</h1>
+{% block content %}
+<div class="container">
+	<div class="row text-center">
+	    <h1>Page Not Found</h1>
+	</div>
 </div>
 {% endblock %}
