--- a/app/templates/hotel_detail.html
+++ b/app/templates/hotel_detail.html
@@ -32,27 +32,15 @@
 			</div>
 
             <div class="row">
-                <select class="input-small" id="continentList" name="continentList[]" multiple="multiple">
-					<option value='$item'>aaaaaa</option>
-                </select>
 
-                </select>
-                	<select class="input-small" id="status">
-                	<option value="all">全部状态</option>
-                	<option value="Open">Open</option>
-                	<option value="Dept_Open">Dept_Open</option>
-                	<option value="Ready">Ready</option>
-                	<option value="Close">Close</option>
-                </select>
-
-                <select class="input-small" id="city_type">
-                    <option value="all">全部类型</option>
-                    <option value="Regular">Regular</option>
-                    <option value="Small">Small</option>
+                <select class="input-small" id="environment">
+                    <option value="test">test环境</option>
+                    <option value="online">线上环境</option>
                 </select>
 
                 <label class="span1 control-label">排序：</label>
                 <select class="input-small" id="sortTag" name="sortTag">
+                    <option value="">选择排序字段</option>
                     <option value="city_id">城市</option>
                     <option value="country">国家</option>
 					<option value="grade">评分</option>
@@ -60,8 +48,8 @@
                 </select>
 
                 <select class="input-small" id="sortOrder" name="sortOrder">
-                    <option value="positive">正序</option>
-                    <option value="negtive">倒序</option>
+                    <option value="asc">正序</option>
+                    <option value="desc">倒序</option>
                 </select>
 
                 <input type="checkbox" id="selectAll"> 全部选定
@@ -78,10 +66,10 @@
     <div id="pager" style="width:100%;height:20px;"></div>
 </div>
 <div id="over"></div>
-<div id="layout"><img src="{{url_for('static', filename='images/loading.gif')}}" /></div>
+<div id="layout"><img src="static/images/loading.gif" /></div>
 {% endblock %}
 
 {% block scripts %}
 	{{ super() }}
-    <script src="{{url_for('static', filename='js/hotel_bw_list.js')}}"></script>
+    <script src="static/js/hotel_detail.js"></script>
 {% endblock %}
